js262/test/language/literals/numeric/numeric-separators/numeric-separator-literal-dot-dds-nsl-ep-err.js


/*---
esid: prod-NumericLiteralSeparator
description: NumericLiteralSeparator may not appear adjacent to ExponentPart
info: |
  NumericLiteralSeparator ::
    _

  DecimalLiteral ::
    . DecimalDigits ExponentPart_opt

  DecimalDigits ::
    ...
    DecimalDigits NumericLiteralSeparator DecimalDigit

  ExponentIndicator :: one of
    e E

negative:
  phase: parse
  type: SyntaxError

features: [numeric-separator-literal]
---*/

$DONOTEVALUATE();

.0_e1
